--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@svgr/webpack": "^6.2.1",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^27.0.3",
-    "@usedapp/core": "=1.0.8",
+    "@usedapp/core": "^1.0.8",
     "axios": "^0.24.0",
     "bignumber.js": "^9.0.2",
     "cors": "^2.8.5",
@@ -54,7 +54,7 @@
     "sharp": "^0.30.2",
     "smooth-scroll": "^16.1.3",
     "styled-components": "^5.3.6",
-    "typescript": "^4.6.4",
+    "typescript": "^4.5.4",
     "typescript-cookie": "^1.0.0",
     "web3": "^1.7.4"
   },
